spacing issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -100,10 +100,6 @@ mark {
   margin: 0;
 }
 
-.bar {
-  margin: 10px;
-}
-
 progress {
   accent-color: coral;
 }
